fixing overflow error

--- a/public/styles.css
+++ b/public/styles.css
@@ -112,7 +112,7 @@ button:hover {
   white-space: nowrap;
   font-weight: bold;
   font-size: 14px;
-  width: 100vw; 
+  width: 100%;
 }
 
 .header-banner__wrapper {
@@ -260,6 +260,13 @@ button:hover {
   height: 100%;
   padding-right: 5px;
   cursor: pointer;
+}
+
+@media (max-width: 1024px) and (min-width: 769px) {
+
+  .site-header__payments {
+    display: none;
+  }
 }
 
 @media (max-width: 768px) {
@@ -832,10 +839,6 @@ input[type="email"] {
     align-items: center;
     padding: 0;
     padding: 8px 0;
-  }
-
-  .social-media {
-    justify-content: space-between;
   }
 }
 /*!******************************************************************!*\
