--- a/src/styles/components/header-banner.css
+++ b/src/styles/components/header-banner.css
@@ -5,7 +5,7 @@
   white-space: nowrap;
   font-weight: bold;
   font-size: 14px;
-  width: 100vw; 
+  width: 100%;
 }
 
 .header-banner__wrapper {
